[gd_scene load_steps=6 format=3 uid="uid://blk2nkrvb0m0d"]

[ext_resource type="Script" path="res://Player.gd" id="1_pa51q"]
[ext_resource type="Texture2D" uid="uid://dghnif8kc8ivd" path="res://Player-Sheet.png" id="1_vjk5p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5blgj"]
size = Vector2(13, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16f2j"]
size = Vector2(17, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4t6i"]
size = Vector2(17, 18)

[node name="Player" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1_pa51q")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_vjk5p")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0.5)
shape = SubResource("RectangleShape2D_5blgj")

[node name="GravJumpActiv" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravJumpActiv"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_16f2j")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SpikeSense" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeSense"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_16f2j")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(5, 8)
lifetime = 2.0
speed_scale = 2.0
emission_shape = 3
emission_rect_extents = Vector2(5, 1)
direction = Vector2(0, 0)
gravity = Vector2(0, 0)

[node name="GroundCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheck"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_g4t6i")
